Psycho/error.txt
Game.java:65: error: incompatible types: int cannot be converted to Color
		Card joker = new Card(1,3);
		                      ^
Game.java:88: error: 'void' type not allowed here
					current.add((players.get(i)).throwCard(random.nextInt(jouables.size())));
					                                      ^
Game.java:89: error: bad operand types for binary operator '=='
					if(current.get(current.size()-1).getRange()==10){
					                                           ^
  first type:  Range
  second type: int
./Player.java:59: error: bad operand types for binary operator '<'
			while(i<main.size() && main.get(i).getRange()<card.getRange())
			                                             ^
  first type:  Range
  second type: Range
./Player.java:61: error: bad operand types for binary operator '<='
			while(i<main.size() && main.get(i).getRange()==card.getRange() && main.get(i).getColor()<=card.getColor())
			                                                                                        ^
  first type:  Color
  second type: Color
./Player.java:132: error: bad operand types for binary operator '=='
		if(lastCard.getRange()==8)
		                      ^
  first type:  Range
  second type: int
./Player.java:136: error: bad operand types for binary operator '=='
		if(lastCard.getRange()==2 || liste.get(i).getRange()==2 || liste.get(i).getRange()==3 || liste.get(i).getRange()==10){
		                      ^
  first type:  Range
  second type: int
./Player.java:136: error: bad operand types for binary operator '=='
		if(lastCard.getRange()==2 || liste.get(i).getRange()==2 || liste.get(i).getRange()==3 || liste.get(i).getRange()==10){
		                                                    ^
  first type:  Range
  second type: int
./Player.java:136: error: bad operand types for binary operator '=='
		if(lastCard.getRange()==2 || liste.get(i).getRange()==2 || liste.get(i).getRange()==3 || liste.get(i).getRange()==10){
		                                                                                  ^
  first type:  Range
  second type: int
./Player.java:136: error: bad operand types for binary operator '=='
		if(lastCard.getRange()==2 || liste.get(i).getRange()==2 || liste.get(i).getRange()==3 || liste.get(i).getRange()==10){
		                                                                                                                ^
  first type:  Range
  second type: int
./Player.java:141: error: bad operand types for binary operator '=='
		if(lastCard.getRange()==7 && (liste.size()>0 && liste.get(i).getRange()<=7)){
		                      ^
  first type:  Range
  second type: int
./Player.java:141: error: bad operand types for binary operator '<='
		if(lastCard.getRange()==7 && (liste.size()>0 && liste.get(i).getRange()<=7)){
		                                                                       ^
  first type:  Range
  second type: int
./Player.java:146: error: bad operand types for binary operator '>='
		if(liste.get(i).getRange()>=lastCard.getRange()){
		                          ^
  first type:  Range
  second type: Range
./Card.java:44: error: bad operand types for binary operator '-'
		return card1.range-card2.range;
		                  ^
  first type:  Range
  second type: Range
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
14 errors
